internal/webapp/static/styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
}

:root {
  --transition-duration: 150ms;
  --transition-timing-function: ease-in-out;
}

html {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    'Roboto',
    'Apple Color Emoji',
    'Helvetica Neue',
    sans-serif;
}

body {
  font-size: 100%;
  background-color: var(--tg-theme-bg-color);
  color: var(--tg-theme-text-color);
}

main {
  height: var(--tg-viewport-stable-height);
}

button {
  cursor: pointer;
  border: none;
  outline: none;
  background-color: var(--tg-theme-button-color);
  color: var(--tg-theme-button-text-color);
  font-size: 1.25rem;
  border-radius: 0.75rem;
  padding: 0.25rem 0.5rem;
  transition: all var(--transition-duration) var(--transition-timing-function);
}

ul {
  margin: 0;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  gap: 0.25rem 0.5rem;
  padding: 0;
  justify-content: center;
}

li {
  margin: 0.25rem 0;
}

label {
  cursor: pointer;
}

.secondary-bg {
  background-color: var(--tg-theme-secondary-bg-color);
}

.header-bg {
  background-color: var(--tg-theme-header-bg-color);
}

.accent-text {
  color: var(--tg-theme-accent-text-color);
}

.section {
  background-color: var(--tg-theme-section-bg-color);
}

.section-header {
  color: var(--tg-theme-section-header-text-color);
}

.subtitle {
  color: var(--tg-theme-subtitle-text-color);
}

.destructive {
  color: var(--tg-theme-destructive-text-color);
}

#callback {
  --_size: 40px;
  border-radius: 999vh;
  width: var(--_size);
  height: var(--_size);
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: calc(var(--tg-viewport-stable-height) - 3rem);
  right: 1rem;
}

#callback svg {
  padding-left: 10%;
}

#callback svg path {
  fill: var(--tg-theme-text-color);
}

.group {
  --_group-radius: 0.5rem;
  --_group-margin: 0.5rem;
  --_group-padding: 0.25rem 0.5rem;
  border-radius: var(--_group-radius);
  margin: var(--_group-margin);
}

.group-header {
  position: sticky;
  top: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: var(--_group-radius);
  overflow: hidden;
  background-color: var(--tg-theme-secondary-bg-color);
  padding: var(--_group-padding);
  transition: border-radius var(--transition-duration)
    var(--transition-timing-function);
}
h3 {
  margin: 0;
}

.group-content-expanded {
  rotate: 45deg;
  transform-origin: center;
  transition: rotate var(--transition-duration)
    var(--transition-timing-function);
}
.group-header:has(+ div > :checked) .group-content-expanded {
  rotate: -30deg;
}

.group-header:has(+ div > :checked) {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.group-content {
  overflow: hidden;
}

.group-content:has(> :checked) .accordion {
  grid-template-rows: 1fr;
}

.accordion {
  display: grid;
  background-color: var(--tg-theme-section-bg-color);
  grid-template-rows: 0fr;
  transition: grid-template-rows var(--transition-duration)
    var(--transition-timing-function);
}

.accordion > div {
  overflow: hidden;
}

.accordion ul {
  padding: var(--_group-padding);
  border: 2px solid var(--tg-theme-secondary-bg-color);
  border-bottom-right-radius: var(--_group-radius);
  border-bottom-left-radius: var(--_group-radius);
}

.tag {
  cursor: pointer;
  border: none;
  outline: none;
  background-color: var(--tg-theme-secondary-bg-color);
  font-size: 1.25rem;
  border-radius: 0.75rem;
  padding: 0.25rem 0.5rem;
  transition: all var(--transition-duration) var(--transition-timing-function);
}

.tag:has(> :checked) {
  background-color: var(--tg-theme-button-color);
  color: var(--tg-theme-button-text-color);
}

#version {
  pointer-events: none;
  position: fixed;
  top: calc(var(--tg-viewport-stable-height) - 2rem);
  left: 1rem;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  background: var(--tg-theme-secondary-bg-color);
}

#version[aria-hidden='true'] {
  display: none;
}

